added home page added missing assets

--- a/PcBuilder.Client/src/app/modules/configurator/configurator.component.html
+++ b/PcBuilder.Client/src/app/modules/configurator/configurator.component.html
@@ -9,7 +9,31 @@
             <div class="tab-content">
                 <!-- Routed view  -->
                 <!-- <router-outlet></router-outlet> -->
-              <p>Content</p>
+              
+                <div class="row justify-content-center">
+                    <div class="col-lg-4">
+                        <div class="item">
+                            <input data-price="1499.00" data-label="MacBook Pro Air" id="answer_1_group_1" type="radio" name="answer_group_1" value="MacBook Pro Air $1499.00" class="required" data-total="0">
+                            <label for="answer_1_group_1"><img src="../../../assets/images/computerParts/backgroudIndex - Copy.jpg" alt="" class="img-fluid"><i class="ribbon"><span>Popular</span></i><span class="item_price">$1499.00</span><strong>MacBook Pro Air</strong>Postea democritum mnesarchum ne nam, ad vim aperiri tractatos.</label>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="item">
+                            <input data-price="1699.00" data-label="MacBook Pro 15" id="answer_2_group_1" name="answer_group_1" type="radio" value="MacBook Pro 15 $1699.00" class="required" data-total="0">
+                            <label for="answer_2_group_1"><img src="../../../assets/images/computerParts/backgroudIndex - Copy.jpg" alt="" class="img-fluid"><span class="item_price">$1699.00</span><strong>MacBook Pro 15</strong>Postea democritum mnesarchum ne nam, ad vim aperiri tractatos.</label>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="item">
+                            <input data-price="1999.00" data-label="Imac 27" id="answer_3_group_1" name="answer_group_1" type="radio" value="Imac 27 $1999.00" class="required" data-total="0">
+                            <label for="answer_3_group_1"><img src="../../../assets/images/computerParts/backgroudIndex - Copy.jpg" alt="" class="img-fluid"><span class="item_price">$1999.00</span><strong>Desktop Imac 27</strong>Postea democritum mnesarchum ne nam, ad vim aperiri tractatos.</label>
+                        </div>
+                    </div>
+                </div>
+                <div style="text-align: center">
+                <button class="btn btn-warning">Quit</button>
+                <button class="btn btn-success">Next</button>
+                 </div>
             </div>
             <!-- End Content Area -->
         </div>
