--- a/PcBuilder.Client/src/styles.css
+++ b/PcBuilder.Client/src/styles.css
@@ -4,3 +4,8 @@
 @import "assets/css/form.css";
 @import "assets/css/loading-bars.css";
 @import url("//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css");
+@import "assets/css/animate.css";
+@import "assets/css/jquery.fancybox.css";
+@import "assets/css/lightbox.css";
+@import "assets/css/queries.css";
+@import "assets/css/styles.css";
