--- a/PcBuilder.Client/src/app/modules/configurator/configurator.component.html
+++ b/PcBuilder.Client/src/app/modules/configurator/configurator.component.html
@@ -1,15 +1,13 @@
-<section style="background:#efefe9;">
-    <div class="container">
-        <div class="board">
-            <!-- Navigation Area (Circular Tabs) -->
-            <config-nav></config-nav>
-            <!-- End Navigation Area (Circular Tabs) -->
- 
-            <!-- Content Area -->
-            <div class="tab-content">
-                <!-- Routed view  -->
-                <!-- <router-outlet></router-outlet> -->
-              
+<div class="board">
+    <!-- Navigation Area (Circular Tabs) -->
+    <app-config-nav></app-config-nav>
+    <!-- End Navigation Area (Circular Tabs) -->
+
+    <!-- Content Area -->
+    <div class="tab-content">
+        <!-- Routed view  -->
+        <!-- <router-outlet></router-outlet> -->
+        <!--               
                 <div class="row justify-content-center">
                     <div class="col-lg-4">
                         <div class="item">
@@ -29,16 +27,12 @@
                             <label for="answer_3_group_1"><img src="../../../assets/images/computerParts/backgroudIndex - Copy.jpg" alt="" class="img-fluid"><span class="item_price">$1999.00</span><strong>Desktop Imac 27</strong>Postea democritum mnesarchum ne nam, ad vim aperiri tractatos.</label>
                         </div>
                     </div>
-                </div>
-                <div style="text-align: center">
-                <button class="btn btn-warning">Quit</button>
-                <button class="btn btn-success">Next</button>
-                 </div>
-            </div>
-            <!-- End Content Area -->
+                </div> -->
+
+        <div style="text-align: center">
+            <button class="btn btn-warning">Quit</button>
+            <button class="btn btn-success">Next</button>
         </div>
- 
-        <!-- For Debugging: show our formData as it is being typed -->
-        <!-- <pre>{{ formData | json }}</pre> -->
     </div>
-</section>
+    <!-- End Content Area -->
+</div>
