--- a/PcBuilder.Client/src/app/modules/configurator/components/config-nav/config-nav.component.css
+++ b/PcBuilder.Client/src/app/modules/configurator/components/config-nav/config-nav.component.css
@@ -1,3 +1,50 @@
 .nav{
     flex-wrap: initial;
+    padding: 20px;
+    margin:auto;
+}
+.nav-tabs > li{
+    width: 13%;
+}
+.imgNavConfig{
+    width: 100px;
+}
+.nav-tabs {
+    border-bottom: 0;
+}
+
+.nav-tabs>li>a{
+    width: 100%;
+    height: 100%;
+    /* padding: 10px 15px; */
+    text-align: center;
+    border:0;
+    border-radius: 0;
+    margin:auto;
+}
+li>a{
+    pointer-events: none;
+}
+
+.title{
+    color:white;
+    font-size: 25px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 700;
+}
+
+.active>p{
+   /* color:red; */
+   /* border: solid lightgrey 2px; */
+}
+
+.board-inner{
+    /* background: linear-gradient(#e66465, #9198e5); */
+    background: linear-gradient(120deg, orange, orange 45%, cyan);
+}
+
+@media (min-width: 1200px){
+    .container {
+    max-width: 1700px;
+}
 }
