--- a/PcBuilder.Client/src/app/modules/configurator/components/config-nav/config-nav.component.html
+++ b/PcBuilder.Client/src/app/modules/configurator/components/config-nav/config-nav.component.html
@@ -1,79 +1,66 @@
 <div class="board-inner" id="status-buttons">
     <ul class="nav nav-tabs" id="myTab">
-        <div class="liner"></div>
-
-        <!-- circular user icon -->
         <li>
-            <a routerLink="/case" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" data-toggle="tab" title="case">
-                <span class="round-tabs one">
-                    <!-- <i class="glyphicon glyphicon-user"></i> -->
-                    <img src="../../../../../assets/images/computerParts/computer_case.png" style="width: 40px">
-                </span>
+            <a routerLink="/configurator" routerLinkActive="active" title="Case">
+                <img class="imgNavConfig" src="../../../../../assets/images/computerParts/computer_case.png" alt="case image">
+                <p class="title">Case</p>
+            </a>
+
+        </li>
+
+        <li>
+            <a routerLink="/cpu" routerLinkActive="active" title="CPU">
+                <img class="imgNavConfig" src="../../../../../assets/images/computerParts/computer_cpu.png" alt="CPU image">
+                <p class="title">CPU</p>
+            </a>
+        </li>
+        <li>
+            <a routerLink="/cooler" routerLinkActive="active" title="Cooler">
+                <img class="imgNavConfig" src="../../../../../assets/images/computerParts/computer_cooler.png" alt="Cooler image">
+                <p class="title">Cpu cooler</p>
             </a>
         </li>
 
-        <!-- circular tasks icon -->
         <li>
-            <a routerLink="/work" routerLinkActive="active" data-toggle="tab" title="work">
-                <span class="round-tabs two">
-                    <img src="../../../../../assets/images/computerParts/computer_cooler.png"style="width: 40px">
-                </span>
+            <a routerLink="/motherboard" routerLinkActive="active" title="Motherboard">
+                <img class="imgNavConfig" src="../../../../../assets/images/computerParts/computer_motherboard.png" alt="Motherboard image">
+                <p class="title">Motherboard</p>
             </a>
         </li>
 
-        <!-- circular home icon -->
         <li>
-            <a routerLink="/address" routerLinkActive="active" data-toggle="tab" title="address">
-                <span class="round-tabs three">
-                    <img src="../../../../../assets/images/computerParts/computer_cpu.png" style="width: 50px">
-                </span>
+            <a routerLink="/ram" routerLinkActive="active" title="Ram">
+                <img class="imgNavConfig" src="../../../../../assets/images/computerParts/computer_ram.png" alt="Ram image">
+                <p class="title">Ram</p>
+            </a>
+        </li>
+        <li>
+            <a routerLink="/videoCard" routerLinkActive="active" title="Video Card">
+                <img class="imgNavConfig" src="../../../../../assets/images/computerParts/computer_videoCard.png" alt="Video Card image">
+                <p class="title">Video Card</p>
             </a>
         </li>
 
-        <!-- circular ok icon -->
         <li>
-            <a routerLink="/result" routerLinkActive="active" data-toggle="tab" title="completed">
-                <span class="round-tabs four">
-                    <img src="../../../../../assets/images/computerParts/computer_motherboard.png" style="width: 40px">
-                </span>
-            </a>
-        </li>
-        <!-- circular user icon -->
-        <li>
-            <a routerLink="/personal" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" data-toggle="tab" title="personal">
-                <span class="round-tabs one">
-                    <img src="../../../../../assets/images/computerParts/computer_ram.png" style="width: 40px">
-                </span>
+            <a routerLink="/storage" routerLinkActive="active" title="Storage">
+                <img class="imgNavConfig" src="../../../../../assets/images/computerParts/computer_storage.png" alt="Storage image">
+                <p class="title">Storage </p>
             </a>
         </li>
 
-        <!-- circular tasks icon -->
         <li>
-            <a routerLink="/work" routerLinkActive="active" data-toggle="tab" title="work">
-                <span class="round-tabs two">
-                    <img src="../../../../../assets/images/computerParts/computer_videoCard.png" style="width: 40px">
-                </span>
+            <a routerLink="/powerSupply" routerLinkActive="active" title="Power Supply">
+                <img class="imgNavConfig" src="../../../../../assets/images/computerParts/computer_powerSupply.png" alt="Power Supply image">
+                <p class="title">Power Supply </p>
             </a>
         </li>
-
-        <!-- circular home icon -->
-        <li>
-            <a routerLink="/address" routerLinkActive="active" data-toggle="tab" title="address">
-                <span class="round-tabs three">
-                    <img src="../../../../../assets/images/computerParts/computer_storage.png" style="width: 40px">
-                </span>
-            </a>
-        </li>
-
-        <!-- circular ok icon -->
-        <li>
-            <a routerLink="/result" routerLinkActive="active" data-toggle="tab" title="completed">
-                <span class="round-tabs four">
-                    <img src="../../../../../assets/images/computerParts/computer_powerSupply.png" style="width: 40px">
-                </span>
-            </a>
-        </li>
-
     </ul>
-    <div class="clearfix"></div>
+
+    <div class="container">
+        <div class="progress">
+            <div class="progress-bar progress-bar-custom" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"
+                style="width:1%">
+            </div>
+        </div>
+    </div>
 </div>
