--- a/PcBuilder.Client/src/app/modules/configurator/components/config-nav/config-nav.component.css
+++ b/PcBuilder.Client/src/app/modules/configurator/components/config-nav/config-nav.component.css
@@ -27,8 +27,8 @@ li>a{
 }
 
 .title{
-    color:white;
-    font-size: 25px;
+    color:black;
+    font-size: 15px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 700;
 }
@@ -36,11 +36,21 @@ li>a{
 .active>p{
    /* color:red; */
    /* border: solid lightgrey 2px; */
+   color:crimson;
+   font-size: 30px;
+   /* font-style: bold; */
 }
 
 .board-inner{
     /* background: linear-gradient(#e66465, #9198e5); */
-    background: linear-gradient(120deg, orange, orange 45%, cyan);
+    /* background: linear-gradient(120deg, orange, orange 45%, cyan); */
+    background-color: lightgrey;
+}
+.progress{
+    background-color: white;
+}
+.progress-bar{
+    background-color: crimson;
 }
 
 @media (min-width: 1200px){
