--- a/PcBuilder.Client/src/app/modules/configurator/components/config-nav/config-nav.component.html
+++ b/PcBuilder.Client/src/app/modules/configurator/components/config-nav/config-nav.component.html
@@ -5,7 +5,6 @@
                 <img class="imgNavConfig" src="../../../../../assets/images/computerParts/computer_case.png" alt="case image">
                 <p class="title">Case</p>
             </a>
-
         </li>
 
         <li>
@@ -58,9 +57,10 @@
 
     <div class="container">
         <div class="progress">
-            <div class="progress-bar progress-bar-custom" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"
+            <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"
                 style="width:1%">
             </div>
         </div>
     </div>
 </div>
+<br>
