--- a/PcBuilder.Client/src/app/modules/configurator/components/config-nav/config-nav.component.css
+++ b/PcBuilder.Client/src/app/modules/configurator/components/config-nav/config-nav.component.css
@@ -1,60 +1,94 @@
-.nav{
-    flex-wrap: initial;
-    padding: 20px;
-    margin:auto;
+.nav {
+  flex-wrap: initial;
+  padding: 20px;
+  margin: auto;
 }
-.nav-tabs > li{
-    width: 13%;
+.nav-tabs > li {
+  width: 13%;
 }
-.imgNavConfig{
-    width: 100px;
+.imgNavConfig {
+  width: 100px;
 }
 .nav-tabs {
-    border-bottom: 0;
+  border-bottom: 0;
 }
 
-.nav-tabs>li>a{
-    width: 100%;
-    height: 100%;
-    /* padding: 10px 15px; */
-    text-align: center;
-    border:0;
-    border-radius: 0;
-    margin:auto;
+.nav-tabs > li > a {
+  width: 100%;
+  height: 100%;
+  /* padding: 10px 15px; */
+  text-align: center;
+  border: 0;
+  border-radius: 0;
+  margin: auto;
 }
-li>a{
-    pointer-events: none;
-}
-
-.title{
-    color:black;
-    font-size: 15px;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-weight: 700;
+li > a {
+  pointer-events: none;
 }
 
-.active>p{
-   /* color:red; */
-   /* border: solid lightgrey 2px; */
-   color:crimson;
-   font-size: 30px;
-   /* font-style: bold; */
+.title {
+  color: black;
+  font-size: 15px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
+    'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: 700;
 }
 
-.board-inner{
-    /* background: linear-gradient(#e66465, #9198e5); */
-    /* background: linear-gradient(120deg, orange, orange 45%, cyan); */
-    background-color: lightgrey;
-}
-.progress{
-    background-color: white;
-}
-.progress-bar{
-    background-color: crimson;
+.active > p {
+  /* color:red; */
+  /* border: solid lightgrey 2px; */
+  color: crimson;
+  font-size: 30px;
+  /* font-style: bold; */
 }
 
-@media (min-width: 1200px){
-    .container {
+.board-inner {
+  /* background: linear-gradient(#e66465, #9198e5); */
+  /* background: linear-gradient(120deg, orange, orange 45%, cyan); */
+  background-color: lightgrey;
+}
+.progress {
+  background-color: white;
+}
+.progress-bar {
+  background-color: crimson;
+}
+
+@media (min-width: 1200px) {
+  .container {
     max-width: 1700px;
+  }
 }
+
+@media (max-width: 900px) {
+  .imgNavConfig {
+    width: 70px;
+  }
+  .active > p {
+    font-size: 20px;
+  }
+  .title{
+      font-size:13px;
+  }
+
+}
+@media (max-width: 767px) {
+    .imgNavConfig {
+      width: 50px;
+    }
+    .active > p {
+      font-size: 15px;
+    }
+}
+
+@media (max-width: 575px) {
+    .imgNavConfig {
+      width: 35px;
+    }
+    .active > p {
+      font-size: 10px;
+    }
+    .title{
+        font-size: 7px;
+    }
 }
