--- a/PcBuilder.Client/src/app/modules/configurator/configurator.component.html
+++ b/PcBuilder.Client/src/app/modules/configurator/configurator.component.html
@@ -6,7 +6,7 @@
     <!-- Content Area -->
     <div class="tab-content">
         <!-- Routed view  -->
-        <!-- <router-outlet></router-outlet> -->
+        <router-outlet></router-outlet>
         <!--               
                 <div class="row justify-content-center">
                     <div class="col-lg-4">
@@ -30,7 +30,7 @@
                 </div> -->
 
         <div style="text-align: center">
-            <button class="btn btn-warning">Quit</button>
+            <button class="btn btn-danger" (click)="exitConfig()">Quit</button>
             <button class="btn btn-success">Next</button>
         </div>
     </div>
