--- a/PcBuilder.Client/src/app/modules/configurator/components/config-nav/config-nav.component.css
+++ b/PcBuilder.Client/src/app/modules/configurator/components/config-nav/config-nav.component.css
@@ -16,7 +16,6 @@
 .nav-tabs > li > a {
   width: 100%;
   height: 100%;
-  /* padding: 10px 15px; */
   text-align: center;
   border: 0;
   border-radius: 0;
@@ -35,17 +34,17 @@ li > a {
 }
 
 .active > p {
-  /* color:red; */
-  /* border: solid lightgrey 2px; */
-  color: crimson;
+  color: red;
+  -webkit-animation: neon1 1.5s ease-in-out infinite alternate;
+  -moz-animation: neon1 1.5s ease-in-out infinite alternate;
+  animation: neon1 1.5s ease-in-out infinite alternate;
   font-size: 30px;
-  /* font-style: bold; */
 }
 
 .board-inner {
   /* background: linear-gradient(#e66465, #9198e5); */
   /* background: linear-gradient(120deg, orange, orange 45%, cyan); */
-  background-color: lightgrey;
+  background-color:whitesmoke;
 }
 .progress {
   background-color: white;
@@ -91,4 +90,42 @@ li > a {
     .title{
         font-size: 7px;
     }
+}
+
+
+
+@-webkit-keyframes neon1 {
+  from {
+    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px #FF1177, 0 0 70px #FF1177, 0 0 80px #FF1177, 0 0 100px #FF1177, 0 0 150px #FF1177;
+  }
+  to {
+    text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #FF1177, 0 0 35px #FF1177, 0 0 40px #FF1177, 0 0 50px #FF1177, 0 0 75px #FF1177;
+  }
+}
+
+@-moz-keyframes neon1 {
+  from {
+    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px #FF1177, 0 0 70px #FF1177, 0 0 80px #FF1177, 0 0 100px #FF1177, 0 0 150px #FF1177;
+  }
+  to {
+    text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #FF1177, 0 0 35px #FF1177, 0 0 40px #FF1177, 0 0 50px #FF1177, 0 0 75px #FF1177;
+  }
+}
+
+@keyframes neon1 {
+  from {
+    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px #FF1177, 0 0 70px #FF1177, 0 0 80px #FF1177, 0 0 100px #FF1177, 0 0 150px #FF1177;
+  }
+  to {
+    text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #FF1177, 0 0 35px #FF1177, 0 0 40px #FF1177, 0 0 50px #FF1177, 0 0 75px #FF1177;
+  }
+}
+
+@media (max-width: 650px) {
+  #container {
+    width: 100%;
+  }
+  p {
+    font-size: 3.5em;
+  }
 }
