--- a/PcBuilder.Client/src/app/modules/core/components/home/home.component.html
+++ b/PcBuilder.Client/src/app/modules/core/components/home/home.component.html
@@ -18,7 +18,7 @@
           <div class="row hero-content">
               <div class="col-md-12">
                   <h1 class="animated fadeInDown"><b>PC Builder.</b><br>Building a computer simpler than ever.</h1>
-                  <a href="configurator" class="use-btn animated fadeInUp">Configure</a>
+                  <a routerLink="configurator/case" class="use-btn animated fadeInUp">Configure</a>
                   <a href="https://www.pcworld.com/article/2987057/computers/how-to-build-a-pc-a-step-by-step-comprehensive-guide.html" class="learn-btn animated fadeInUp">Learn more
                       <i class="fa fa-arrow-down"></i>
                   </a>
@@ -44,9 +44,9 @@
 <div class="overlay overlay-boxify" [ngClass]="{'open': isOpen}">
   <nav>
       <ul>
-          <li><a href="configurator"><i class="fa fa-desktop"></i>Configure</a></li>
-          <li><a href="#features"><i class="fa fa-flash"></i>Tutorials</a></li>
-          <li><a href="#screenshots"><i class="fa fa-heart"></i>Blog</a></li>
+          <li><a routerLink="configurator/case"><i class="fa fa-desktop"></i>Configure</a></li>
+          <li><a routerLink="#features"><i class="fa fa-flash"></i>Tutorials</a></li>
+          <li><a routerLink="#screenshots"><i class="fa fa-heart"></i>Blog</a></li>
       </ul>
   </nav>
 </div>
