added required components implemented config-nav compoent implemented cards for case component

--- a/PcBuilder.Client/src/app/modules/configurator/components/config-nav/config-nav.component.html
+++ b/PcBuilder.Client/src/app/modules/configurator/components/config-nav/config-nav.component.html
@@ -1,54 +1,54 @@
 <div class="board-inner" id="status-buttons">
     <ul class="nav nav-tabs" id="myTab">
         <li>
-            <a routerLink="/configurator" routerLinkActive="active" title="Case">
+            <a routerLink="/configurator/case" routerLinkActive="active" title="Case">
                 <img class="imgNavConfig" src="../../../../../assets/images/computerParts/computer_case.png" alt="case image">
                 <p class="title">Case</p>
             </a>
         </li>
 
         <li>
-            <a routerLink="/cpu" routerLinkActive="active" title="CPU">
+            <a routerLink="/configurator/cpu" routerLinkActive="active" title="CPU">
                 <img class="imgNavConfig" src="../../../../../assets/images/computerParts/computer_cpu.png" alt="CPU image">
                 <p class="title">CPU</p>
             </a>
         </li>
         <li>
-            <a routerLink="/cooler" routerLinkActive="active" title="Cooler">
+            <a routerLink="/configurator/cooler" routerLinkActive="active" title="Cooler">
                 <img class="imgNavConfig" src="../../../../../assets/images/computerParts/computer_cooler.png" alt="Cooler image">
                 <p class="title">Cpu cooler</p>
             </a>
         </li>
 
         <li>
-            <a routerLink="/motherboard" routerLinkActive="active" title="Motherboard">
+            <a routerLink="/configurator/motherboard" routerLinkActive="active" title="Motherboard">
                 <img class="imgNavConfig" src="../../../../../assets/images/computerParts/computer_motherboard.png" alt="Motherboard image">
                 <p class="title">Motherboard</p>
             </a>
         </li>
 
         <li>
-            <a routerLink="/ram" routerLinkActive="active" title="Ram">
+            <a routerLink="/configurator/ram" routerLinkActive="active" title="Ram">
                 <img class="imgNavConfig" src="../../../../../assets/images/computerParts/computer_ram.png" alt="Ram image">
                 <p class="title">Ram</p>
             </a>
         </li>
         <li>
-            <a routerLink="/videoCard" routerLinkActive="active" title="Video Card">
+            <a routerLink="/configurator/videoCard" routerLinkActive="active" title="Video Card">
                 <img class="imgNavConfig" src="../../../../../assets/images/computerParts/computer_videoCard.png" alt="Video Card image">
                 <p class="title">Video Card</p>
             </a>
         </li>
 
         <li>
-            <a routerLink="/storage" routerLinkActive="active" title="Storage">
+            <a routerLink="/configurator/storage" routerLinkActive="active" title="Storage">
                 <img class="imgNavConfig" src="../../../../../assets/images/computerParts/computer_storage.png" alt="Storage image">
                 <p class="title">Storage </p>
             </a>
         </li>
 
         <li>
-            <a routerLink="/powerSupply" routerLinkActive="active" title="Power Supply">
+            <a routerLink="/configurator/powerSupply" routerLinkActive="active" title="Power Supply">
                 <img class="imgNavConfig" src="../../../../../assets/images/computerParts/computer_powerSupply.png" alt="Power Supply image">
                 <p class="title">Power Supply </p>
             </a>
@@ -58,7 +58,7 @@
     <div class="container">
         <div class="progress">
             <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"
-                style="width:1%">
+                style="width:100%">
             </div>
         </div>
     </div>
