--- a/PcBuilder.Client/src/app/modules/configurator/components/case/case.component.html
+++ b/PcBuilder.Client/src/app/modules/configurator/components/case/case.component.html
@@ -1,3 +1,201 @@
-<p>
-  case works!
-</p>
+<div class="container-fluid">
+  <h3>Please select a product:</h3>
+
+  <div class="col-sm-12">
+    <ul class="cards">
+      <li class="cards__item">
+        <div class="card">
+          <div class="card_image">
+            <img src="../../../../../assets/images/computerParts/computer_case.png">
+            <div class="info">
+              <h2>Specifications:</h2>
+              <ul>
+                <li>
+                  <strong>Sun Needs: </strong>Full Sun</li>
+                <li>
+                  <strong>Soil Needs: </strong>Damp</li>
+                <li>
+                  <strong>Zones: </strong>9 - 11</li>
+                <li>
+                  <strong>Height: </strong>2 - 3 feet</li>
+                <li>
+                  <strong>Blooms in: </strong>Mid‑Summer - Mid‑Fall</li>
+                <li>
+                  <strong>Features: </strong>Tolerates heat</li>
+              </ul>
+            </div>
+          </div>
+          <div class="card__content">
+            <div class="card__title">Flex</div>
+            <p class="card__text">This is the shorthand for flex-grow, flex-shrink and flex-basis combined. The second and third parameters (flex-shrink
+              and flex-basis) are optional. Default is 0 1 auto. </p>
+            <div class="buttons">
+              <button class="btn btn--block card__btn">Select</button>
+            </div>
+          </div>
+        </div>
+      </li>
+      <li class="cards__item">
+        <div class="card">
+          <div class="card_image">
+            <img src="../../../../../assets/images/computerParts/computer_case.png">
+            <div class="info">
+                <h2>Specifications:</h2>
+                <ul>
+                  <li>
+                    <strong>Sun Needs: </strong>Full Sun</li>
+                  <li>
+                    <strong>Soil Needs: </strong>Damp</li>
+                  <li>
+                    <strong>Zones: </strong>9 - 11</li>
+                  <li>
+                    <strong>Height: </strong>2 - 3 feet</li>
+                  <li>
+                    <strong>Blooms in: </strong>Mid‑Summer - Mid‑Fall</li>
+                  <li>
+                    <strong>Features: </strong>Tolerates heat</li>
+                </ul>
+              </div>
+          </div>
+          <div class="card__content">
+            <div class="card__title">Flex</div>
+            <p class="card__text">This is the shorthand for flex-grow, flex-shrink and flex-basis combined. The second and third parameters (flex-shrink
+              and flex-basis) are optional. Default is 0 1 auto. </p>
+            <div class="buttons">
+              <button class="btn btn--block card__btn">Select</button>
+            </div>
+          </div>
+        </div>
+      </li>
+      <li class="cards__item">
+        <div class="card">
+          <div class="card_image">
+            <img src="../../../../../assets/images/computerParts/computer_case.png">
+            <div class="info">
+              <h2>Specifications:</h2>
+              <ul>
+                <li>
+                  <strong>Sun Needs: </strong>Full Sun</li>
+                <li>
+                  <strong>Soil Needs: </strong>Damp</li>
+                <li>
+                  <strong>Zones: </strong>9 - 11</li>
+                <li>
+                  <strong>Height: </strong>2 - 3 feet</li>
+                <li>
+                  <strong>Blooms in: </strong>Mid‑Summer - Mid‑Fall</li>
+                <li>
+                  <strong>Features: </strong>Tolerates heat</li>
+              </ul>
+            </div>
+          </div>
+          <div class="card__content">
+            <div class="card__title">Flex</div>
+            <p class="card__text">This is the shorthand for flex-grow, flex-shrink and flex-basis combined. The second and third parameters (flex-shrink
+              and flex-basis) are optional. Default is 0 1 auto. </p>
+            <div class="buttons">
+              <button class="btn btn--block card__btn">Select</button>
+            </div>
+          </div>
+        </div>
+      </li>
+      <li class="cards__item">
+        <div class="card">
+          <div class="card_image">
+            <img src="../../../../../assets/images/computerParts/computer_case.png">
+            <div class="info">
+              <h2>Specifications:</h2>
+              <ul>
+                <li>
+                  <strong>Sun Needs: </strong>Full Sun</li>
+                <li>
+                  <strong>Soil Needs: </strong>Damp</li>
+                <li>
+                  <strong>Zones: </strong>9 - 11</li>
+                <li>
+                  <strong>Height: </strong>2 - 3 feet</li>
+                <li>
+                  <strong>Blooms in: </strong>Mid‑Summer - Mid‑Fall</li>
+                <li>
+                  <strong>Features: </strong>Tolerates heat</li>
+              </ul>
+            </div>
+          </div>
+          <div class="card__content">
+            <div class="card__title">Flex</div>
+            <p class="card__text">This is the shorthand for flex-grow, flex-shrink and flex-basis combined. The second and third parameters (flex-shrink
+              and flex-basis) are optional. Default is 0 1 auto. </p>
+            <div class="buttons">
+              <button class="btn btn--block card__btn">Select</button>
+            </div>
+          </div>
+        </div>
+      </li>
+      <li class="cards__item">
+        <div class="card">
+          <div class="card_image">
+            <img src="../../../../../assets/images/computerParts/computer_case.png">
+            <div class="info">
+              <h2>Specifications:</h2>
+              <ul>
+                <li>
+                  <strong>Sun Needs: </strong>Full Sun</li>
+                <li>
+                  <strong>Soil Needs: </strong>Damp</li>
+                <li>
+                  <strong>Zones: </strong>9 - 11</li>
+                <li>
+                  <strong>Height: </strong>2 - 3 feet</li>
+                <li>
+                  <strong>Blooms in: </strong>Mid‑Summer - Mid‑Fall</li>
+                <li>
+                  <strong>Features: </strong>Tolerates heat</li>
+              </ul>
+            </div>
+          </div>
+          <div class="card__content">
+            <div class="card__title">Flex</div>
+            <p class="card__text">This is the shorthand for flex-grow, flex-shrink and flex-basis combined. The second and third parameters (flex-shrink
+              and flex-basis) are optional. Default is 0 1 auto. </p>
+            <div class="buttons">
+              <button class="btn btn--block card__btn">Select</button>
+            </div>
+          </div>
+        </div>
+      </li>
+      <li class="cards__item">
+        <div class="card">
+          <div class="card_image">
+            <img src="../../../../../assets/images/computerParts/computer_case.png">
+            <div class="info">
+              <h2>Specifications:</h2>
+              <ul>
+                <li>
+                  <strong>Sun Needs: </strong>Full Sun</li>
+                <li>
+                  <strong>Soil Needs: </strong>Damp</li>
+                <li>
+                  <strong>Zones: </strong>9 - 11</li>
+                <li>
+                  <strong>Height: </strong>2 - 3 feet</li>
+                <li>
+                  <strong>Blooms in: </strong>Mid‑Summer - Mid‑Fall</li>
+                <li>
+                  <strong>Features: </strong>Tolerates heat</li>
+              </ul>
+            </div>
+          </div>
+          <div class="card__content">
+            <div class="card__title">Flex</div>
+            <p class="card__text">This is the shorthand for flex-grow, flex-shrink and flex-basis combined. The second and third parameters (flex-shrink
+              and flex-basis) are optional. Default is 0 1 auto. </p>
+            <div class="buttons">
+              <button class="btn btn--block card__btn">Select</button>
+            </div>
+          </div>
+        </div>
+      </li>
+    </ul>
+  </div>
+
+</div>
