--- a/PcBuilder.Client/src/app/modules/core/components/home/home.component.html
+++ b/PcBuilder.Client/src/app/modules/core/components/home/home.component.html
@@ -10,7 +10,7 @@
               </div>
               <div class="col-md-6 col-sm-6 col-xs-6 text-right navicon">
                   <p>MENU</p>
-                  <a id="trigger-overlay" class="nav_slide_button nav-toggle" href="#" [ngClass]="{'active': isActive}" (click)="isActive = !isActive; isOpen = !isOpen">
+                  <a id="trigger-overlay" class="nav_slide_button nav-toggle" [ngClass]="{'active': isActive}" (click)="isActive = !isActive; isOpen = !isOpen">
                       <span></span>
                   </a>
               </div>
