--- a/PcBuilder.Client/src/styles.css
+++ b/PcBuilder.Client/src/styles.css
@@ -3,7 +3,7 @@
 @import "assets/css/style.css";
 @import "assets/css/form.css";
 @import "assets/css/loading-bars.css";
-@import url("//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css");
+/* @import url("//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"); */
 @import "assets/css/animate.css";
 @import "assets/css/jquery.fancybox.css";
 @import "assets/css/lightbox.css";
