--- a/PcBuilder.Client/src/app/modules/core/components/tutorial/tutorial.component.html
+++ b/PcBuilder.Client/src/app/modules/core/components/tutorial/tutorial.component.html
@@ -1,7 +1,7 @@
 <div class="background">
   <h2>Learn about computer components:</h2>
   <header>
-  <section class="">
+  <section>
     <div class="texture-overlay"></div>
     <div class="container">
       <div class="row nav-wrapper">
@@ -367,7 +367,7 @@
 <div class="overlay overlay-boxify" [ngClass]="{'open': isOpen}">
     <nav>
         <ul>
-            <li><a routerLink="configurator/case"><i class="fa fa-desktop"></i>Configure</a></li>
+            <li><a routerLink="../configurator/case"><i class="fa fa-desktop"></i>Configure</a></li>
             <li><a routerLink=""><i class="fa fa-flash"></i>Home</a></li>
             <li><a routerLink="#screenshots"><i class="fa fa-heart"></i>Blog</a></li>
         </ul>
