--- a/PcBuilder.Client/src/app/modules/configurator/components/case/case.component.css
+++ b/PcBuilder.Client/src/app/modules/configurator/components/case/case.component.css
@@ -79,7 +79,8 @@ img {
 }
 .card__text {
   flex: 1 1 auto;
-  font-size: 0.875rem;
+  /* font-size: 0.875rem; */
+  font-size: 25px;
   line-height: 1.5;
   margin-bottom: 1.25rem;
 }
@@ -134,4 +135,56 @@ img {
 }
 .card_image:hover img {
   transform: scale(1.2, 1.2);
+}
+
+.container-fluid {
+  padding-bottom: 50px;
+}
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  color: white;
+  text-align: center;
+  padding: 10px;
+  height: 65px;
+}
+
+.footer .btn-danger {
+  color: #fff;
+  background-color: #dc3545;
+  border-color: #dc3545;
+  text-transform: none;
+}
+
+.footer .btn-success {
+  color: #fff;
+  background-color: #28a745;
+  border-color: #28a745;
+  text-transform: none;
+}
+.footer .btn-warning {
+  color: white;
+  background-color: #ffc107;
+  border-color: #ffc107;
+  text-transform: none;
+}
+.footer_content {
+  display: flex;
+}
+
+.total_price {
+  background-color: crimson;
+  padding: 10px 15px 10px;
+  border-radius: 20px;
+  display: inline-block;
+  margin-bottom: 10px;
+  color: #fff;
+  font-weight: 700;
+  font-size: 18px;
+}
+
+.selected{
+  box-shadow: 0px 0px 60px -5px crimson;
 }
