added selected logic for case component added shared folder with services components and models

--- a/PcBuilder.Client/src/app/modules/configurator/components/case/case.component.html
+++ b/PcBuilder.Client/src/app/modules/configurator/components/case/case.component.html
@@ -2,192 +2,10 @@
   <h3>Please select a product:</h3>
 
   <div class="col-sm-12">
-    <ul class="cards">
-      <li class="cards__item">
-        <div class="card" [ngClass]="{'selected': isSelected}">
-          <div class="card_image">
-            <img src="../../../../../assets/images/computerParts/computer_case.png">
-            <div class="info">
-              <h2>Specifications:</h2>
-              <ul>
-                <li>
-                  <strong>Sun Needs: </strong>Full Sun</li>
-                <li>
-                  <strong>Soil Needs: </strong>Damp</li>
-                <li>
-                  <strong>Zones: </strong>9 - 11</li>
-                <li>
-                  <strong>Height: </strong>2 - 3 feet</li>
-                <li>
-                  <strong>Blooms in: </strong>Mid‑Summer - Mid‑Fall</li>
-                <li>
-                  <strong>Features: </strong>Tolerates heat</li>
-              </ul>
-            </div>
-          </div>
-          <div class="card__content">
-            <div class="card__title"> Deepcool Tesseract BF black</div>
-            <p class="card__text">100$ </p>
-            <div class="buttons">
-              <button class="btn btn--block card__btn" (click)="isSelected = !isSelected">Select</button>
-            </div>
-          </div>
-        </div>
-      </li>
-      <li class="cards__item">
-        <div class="card" [ngClass]="{'selected': isSelected}">
-          <div class="card_image">
-            <img src="../../../../../assets/images/computerParts/computer_case.png">
-            <div class="info">
-                <h2>Specifications:</h2>
-                <ul>
-                  <li>
-                    <strong>Sun Needs: </strong>Full Sun</li>
-                  <li>
-                    <strong>Soil Needs: </strong>Damp</li>
-                  <li>
-                    <strong>Zones: </strong>9 - 11</li>
-                  <li>
-                    <strong>Height: </strong>2 - 3 feet</li>
-                  <li>
-                    <strong>Blooms in: </strong>Mid‑Summer - Mid‑Fall</li>
-                  <li>
-                    <strong>Features: </strong>Tolerates heat</li>
-                </ul>
-              </div>
-          </div>
-          <div class="card__content">
-            <div class="card__title"> Segotep SG-K8 Black</div>
-            <p class="card__text">150$ </p>
-            <div class="buttons">
-              <button class="btn btn--block card__btn">Select</button>
-            </div>
-          </div>
-        </div>
-      </li>
-      <li class="cards__item">
-        <div class="card">
-          <div class="card_image">
-            <img src="../../../../../assets/images/computerParts/computer_case.png">
-            <div class="info">
-              <h2>Specifications:</h2>
-              <ul>
-                <li>
-                  <strong>Sun Needs: </strong>Full Sun</li>
-                <li>
-                  <strong>Soil Needs: </strong>Damp</li>
-                <li>
-                  <strong>Zones: </strong>9 - 11</li>
-                <li>
-                  <strong>Height: </strong>2 - 3 feet</li>
-                <li>
-                  <strong>Blooms in: </strong>Mid‑Summer - Mid‑Fall</li>
-                <li>
-                  <strong>Features: </strong>Tolerates heat</li>
-              </ul>
-            </div>
-          </div>
-          <div class="card__content">
-            <div class="card__title">Zalman Z3 Plus</div>
-            <p class="card__text">175$</p>
-            <div class="buttons">
-              <button class="btn btn--block card__btn">Select</button>
-            </div>
-          </div>
-        </div>
-      </li>
-      <li class="cards__item">
-        <div class="card">
-          <div class="card_image">
-            <img src="../../../../../assets/images/computerParts/computer_case.png">
-            <div class="info">
-              <h2>Specifications:</h2>
-              <ul>
-                <li>
-                  <strong>Sun Needs: </strong>Full Sun</li>
-                <li>
-                  <strong>Soil Needs: </strong>Damp</li>
-                <li>
-                  <strong>Zones: </strong>9 - 11</li>
-                <li>
-                  <strong>Height: </strong>2 - 3 feet</li>
-                <li>
-                  <strong>Blooms in: </strong>Mid‑Summer - Mid‑Fall</li>
-                <li>
-                  <strong>Features: </strong>Tolerates heat</li>
-              </ul>
-            </div>
-          </div>
-          <div class="card__content">
-            <div class="card__title">Floston RED FIRE</div>
-            <p class="card__text">190$</p>
-            <div class="buttons">
-              <button class="btn btn--block card__btn">Select</button>
-            </div>
-          </div>
-        </div>
-      </li>
-      <li class="cards__item">
-        <div class="card">
-          <div class="card_image">
-            <img src="../../../../../assets/images/computerParts/computer_case.png">
-            <div class="info">
-              <h2>Specifications:</h2>
-              <ul>
-                <li>
-                  <strong>Sun Needs: </strong>Full Sun</li>
-                <li>
-                  <strong>Soil Needs: </strong>Damp</li>
-                <li>
-                  <strong>Zones: </strong>9 - 11</li>
-                <li>
-                  <strong>Height: </strong>2 - 3 feet</li>
-                <li>
-                  <strong>Blooms in: </strong>Mid‑Summer - Mid‑Fall</li>
-                <li>
-                  <strong>Features: </strong>Tolerates heat</li>
-              </ul>
-            </div>
-          </div>
-          <div class="card__content">
-            <div class="card__title">Segotep Legend C2</div>
-            <p class="card__text">192$ </p>
-            <div class="buttons">
-              <button class="btn btn--block card__btn">Select</button>
-            </div>
-          </div>
-        </div>
-      </li>
-      <li class="cards__item">
-        <div class="card">
-          <div class="card_image">
-            <img src="../../../../../assets/images/computerParts/computer_case.png">
-            <div class="info">
-              <h2>Specifications:</h2>
-              <ul>
-                <li>
-                  <strong>Sun Needs: </strong>Full Sun</li>
-                <li>
-                  <strong>Soil Needs: </strong>Damp</li>
-                <li>
-                  <strong>Zones: </strong>9 - 11</li>
-                <li>
-                  <strong>Height: </strong>2 - 3 feet</li>
-                <li>
-                  <strong>Blooms in: </strong>Mid‑Summer - Mid‑Fall</li>
-                <li>
-                  <strong>Features: </strong>Tolerates heat</li>
-              </ul>
-            </div>
-          </div>
-          <div class="card__content">
-            <div class="card__title">Segotep Halo 5 Black</div>
-            <p class="card__text">199$</p>
-            <div class="buttons">
-              <button class="btn btn--block card__btn">Select</button>
-            </div>
-          </div>
-        </div>
+    <ul class="cards" >
+      
+      <li class="cards__item" *ngFor="let case of cases">
+          <app-card [case]="case" (caseEvent)="caseSelected($event)"></app-card>
       </li>
     </ul>
   </div>
@@ -197,9 +15,9 @@
             <p><span class="total_price">Total: $1999.00</span></p>
         </div>
         <div class="col-sm-6">
-            <button class="btn btn-warning"> < Prev</button>
+            <!-- <button class="btn btn-warning"> < Prev</button> -->
             <button class="btn btn-danger">Quit</button>
-            <button class="btn btn-success">Next ></button>
+            <button class="btn btn-success" [disabled]="isDisabled" (click)="goToCPU()">Next ></button>
         </div>
       </div>
     </div>
