--- a/PcBuilder.Client/src/app/modules/configurator/components/cpu/cpu.component.html
+++ b/PcBuilder.Client/src/app/modules/configurator/components/cpu/cpu.component.html
@@ -1,3 +1,26 @@
-<p>
-  cpu works!
-</p>
+<div class="container-fluid">
+    <h3>Please select a product:</h3>
+  
+    <div class="col-sm-12">
+      <ul class="cards" >
+        
+        <li class="cards__item" *ngFor="let cpu of cpus">
+            <app-cpu-card [cpu]="cpu" (cpuEvent)="cpuSelected($event)"></app-cpu-card>
+        </li>
+      </ul>
+    </div>
+    <div class="footer">
+        <div class="col-sm-12 footer_content">
+          <div class="col-sm-3">
+              <p><span class="total_price">Total: $1999.00</span></p>
+          </div>
+          <div class="col-sm-6">
+              <button class="btn btn-warning" (click)="goToCase()"> < Prev</button>
+              <button class="btn btn-danger" routerLink="">Quit</button>
+              <button class="btn btn-success" [disabled]="isDisabled" (click)="goToCpuCooler()">Next ></button>
+          </div>
+        </div>
+      </div>
+  </div>
+  
+  
