--- a/PcBuilder.Client/src/app/modules/configurator/shared/components/case-card/case-card.component.css
+++ b/PcBuilder.Client/src/app/modules/configurator/shared/components/case-card/case-card.component.css
@@ -25,8 +25,8 @@
   
   .card__title {
     color: #696969;
-    font-size: 1.25rem;
-    font-weight: 300;
+    /* font-size: 1.25rem; */
+    /* font-weight: 300; */
     letter-spacing: 2px;
     text-transform: uppercase;
   }
