--- a/PcBuilder.Client/src/app/modules/configurator/components/case/case.component.html
+++ b/PcBuilder.Client/src/app/modules/configurator/components/case/case.component.html
@@ -12,10 +12,9 @@
   <div class="footer">
       <div class="col-sm-12 footer_content">
         <div class="col-sm-3">
-            <p><span class="total_price">Total: $1999.00</span></p>
+            <p><span class="total_price">Total: ${{currentTotalPrice}}</span></p>
         </div>
         <div class="col-sm-6">
-            <!-- <button class="btn btn-warning"> < Prev</button> -->
             <button class="btn btn-danger" routerLink="">Quit</button>
             <button class="btn btn-success" [disabled]="isDisabled" (click)="goToCPU()">Next ></button>
         </div>
