--- a/PcBuilder.Client/src/app/modules/configurator/components/cpu/cpu.component.html
+++ b/PcBuilder.Client/src/app/modules/configurator/components/cpu/cpu.component.html
@@ -12,7 +12,7 @@
     <div class="footer">
         <div class="col-sm-12 footer_content">
           <div class="col-sm-3">
-              <p><span class="total_price">Total: $1999.00</span></p>
+              <p><span class="total_price">Total: ${{currentTotalPrice}}</span></p>
           </div>
           <div class="col-sm-6">
               <button class="btn btn-warning" (click)="goToCase()"> < Prev</button>
