--- a/PcBuilder.Client/src/app/modules/configurator/components/config-nav/config-nav.component.html
+++ b/PcBuilder.Client/src/app/modules/configurator/components/config-nav/config-nav.component.html
@@ -58,7 +58,7 @@
     <div class="container">
         <div class="progress">
             <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"
-                style="width:100%">
+            [style.width]="configService.progress + '%'">
             </div>
         </div>
     </div>
