added functionalities for ram component

--- a/PcBuilder.Client/src/app/modules/configurator/components/config-nav/config-nav.component.html
+++ b/PcBuilder.Client/src/app/modules/configurator/components/config-nav/config-nav.component.html
@@ -34,7 +34,7 @@
             </a>
         </li>
         <li>
-            <a routerLink="/configurator/videoCard" routerLinkActive="active" title="Video Card">
+            <a routerLink="/configurator/videocard" routerLinkActive="active" title="Video Card">
                 <img class="imgNavConfig" src="../../../../../assets/images/computerParts/computer_videoCard.png" alt="Video Card image">
                 <p class="title">Video Card</p>
             </a>
