--- a/PcBuilder.Client/src/app/modules/configurator/components/videoCard/videoCard.component.html
+++ b/PcBuilder.Client/src/app/modules/configurator/components/videoCard/videoCard.component.html
@@ -1,3 +1,25 @@
-<p>
-  videoCard works!
-</p>
+<div class="container-fluid">
+  <h3>Please select a product:</h3>
+
+  <div class="col-sm-12">
+    <ul class="cards" >
+      
+      <li class="cards__item" *ngFor="let videocard of videocards">
+          <app-videocard-card [videocard]="videocard" (videocardEvent)="videocardSelected($event)"></app-videocard-card>
+      </li>
+    </ul>
+  </div>
+  <div class="footer">
+      <div class="col-sm-12 footer_content">
+        <div class="col-sm-3">
+            <p><span class="total_price">Total: ${{currentTotalPrice}}</span></p>
+        </div>
+        <div class="col-sm-6">
+            <button class="btn btn-warning" (click)="goToRam()"> < Prev</button>
+            <button class="btn btn-danger" routerLink="">Quit</button>
+            <button class="btn btn-success" [disabled]="isDisabled" (click)="goToStorage()">Next ></button>
+        </div>
+      </div>
+    </div>
+</div>
+
