added functionalities for powersupply component

--- a/PcBuilder.Client/src/app/modules/configurator/components/powerSupply/powerSupply.component.html
+++ b/PcBuilder.Client/src/app/modules/configurator/components/powerSupply/powerSupply.component.html
@@ -1,3 +1,25 @@
-<p>
-  powerSupply works!
-</p>
+<div class="container-fluid">
+  <h3>Please select a product:</h3>
+
+  <div class="col-sm-12">
+    <ul class="cards" >
+      
+      <li class="cards__item" *ngFor="let powersupply of powersupplies">
+          <app-powersupply-card [powersupply]="powersupply" (powersupplyEvent)="powersupplySelected($event)"></app-powersupply-card>
+      </li>
+    </ul>
+  </div>
+  <div class="footer">
+      <div class="col-sm-12 footer_content">
+        <div class="col-sm-3">
+            <p><span class="total_price">Total: ${{currentTotalPrice}}</span></p>
+        </div>
+        <div class="col-sm-6">
+            <button class="btn btn-warning" (click)="goToStorage()"> < Prev</button>
+            <button class="btn btn-danger" routerLink="">Quit</button>
+            <button class="btn btn-success" [disabled]="isDisabled" (click)="goToResult()">Finish</button>
+        </div>
+      </div>
+    </div>
+</div>
+
